package wp;

import wp.unsafe.Process;

import java.util.Arrays;

public class Main {
    public static void main(String[] args) {
        System.out.println(
                Process.apply(Arrays.asList(args))
        );
    }
}
